--- a/index.html
+++ b/index.html
@@ -3,22 +3,19 @@ layout: default
 title: Jeremy Neal
 ---
 
-<div id="web" class="section">
-  <h3>I make websites and webapps.</h3>
-  <ul>
-  {% for post in site.categories['web'] %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a>: {{ post.description }}</li>
-  {% endfor %}
-  </ul>
+<div id="home" class="section">
+    <img id="face" src="/assets/me.jpg" />
+    <h3>Hi, my name is Jeremy.</h3>
 </div>
 
-<div id="games" class="section">
-  <h3>I make games, too!</h3>
-  <ul>
-    {% for post in site.categories['games'] %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a>: {{ post.description }}</li>
-    {% endfor %}
-  </ul>
+<div id="about" class="section">
+  <div id="web">
+    <h3>I make websites and webapps.</h3>
+  </div>
+
+  <div id="games">
+    <h3>I make games, too!</h3>
+  </div>
 </div>
 
 <div id="contact" class="section">
@@ -26,7 +23,7 @@ title: Jeremy Neal
   <ul>
     <li>I'm on <a href="http://twitter.com/@jneal7492">Twitter</a>.</li>
     <li>Otherwise, I respond to <a href="mailto:jneal1992@gmail.com">email</a>.</li>
-    <li>I try to put most of my projects on my <a
-      href="http://github.com/sdroadie/">Github</a>.</li>
+    <li>I try to put most of my projects on my <a href="http://github.com/sdroadie/">Github</a>.</li>
   </ul>
 </div>
+
