Changed list styling to Bootstrap 'list-unstyled'.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Jeremy Neal
 
 <div id="contact" class="section">
   <h3>Drop me a line!</h3>
-  <ul>
+  <ul class="list-unstyled">
     <li>I'm on <a href="http://twitter.com/@jneal7492">Twitter</a>.</li>
     <li>Otherwise, I respond to <a href="mailto:jneal1992@gmail.com">email</a>.</li>
     <li>I try to put most of my projects on my <a href="http://github.com/sdroadie/">Github</a>.</li>
