--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@ layout: blog
 
 <div id="header" class="section">
   <h1>My Blog Posts</h1>
-  <ul>
+  <ul class="list-unstyled">
   {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a><li>
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
   </ul>
 </div>
