--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@ title: Jeremy Neal
 <div id="home" class="section">
   <div class="inner">
     <img id="face" src="/assets/me.jpg" />
-    <h3>Hi, my name is Jeremy.</h3>
+    <h3>Hi, my name is <span class="splash">Jeremy</span>.</h3>
   </div>
 </div>
 
 <div id="about" class="section">
   <div class="inner">
     <div id="web">
-      <h3>I make websites and webapps.</h3>
+      <h3>I make <span class="splash">websites</span> and <span
+          class="splash">webapps</span>.</h3>
     </div>
 
     <div id="games">
-      <h3>I make games, too!</h3>
+      <h3>I make <span class="splash">games</span>, too!</h3>
     </div>
   </div>
 </div>
