--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ permalink: 404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}">Head back home</a> to try finding it again.</p>
+  <h1 class="page-title">Oops...</h1>
+  <p class="lead">Yeah, there's nothing here. Try the nav menu on the left, or <a href="{{ site.baseurl }}">head back home</a> to try finding it again.</p>
 </div>
