--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">Oops...</h1>
-  <p class="lead">Yeah, there's nothing here. Try the nav menu on the left, or <a href="{{ site.baseurl | relative_url }}">head back home</a> to try finding it again.</p>
+  <p class="lead">Yeah, there's nothing here. Try the nav menu on the left, or <a href="{{ site.baseurl | absolute_url }}">head back home</a> to try finding it again.</p>
 </div>
